test/Conversion/ImportLiberty/error.lib
// RUN: circt-translate --import-liberty --verify-diagnostics --split-input-file %s

library(test) {
  cell() { } // expected-error {{cell missing name}}
}

// -----

library(test) {
  cell(C) {
    pin() { } // expected-error {{pin missing name}}
  }
}

// -----

library(test) {
  cell(C) {
    pin(A) { } // expected-error {{pin direction must be specified}}
  }
}

// -----

library(test) {
  cell(C) {
    pin(A) { // expected-error {{pin direction must be input, output, or inout}}
      direction: invalid;
    }
  }
}

// -----

library(test) {
  cell(C) { // expected-error {{cell 'C' has mixed output pins with and without 'function' attribute}}
    pin(Z) {
      direction: output;
    }
    pin(Z2) {
      direction: output;
      function: "A * B";
    }
  }
}

// -----

library(test) {
  cell(C) {
    pin(A) { direction: input; }
    pin(Z) {
      direction: output;
      function: "A * B"; // expected-error {{variable not found}}
    }
  }
}

// -----

library(test) {
  cell(C) {
    pin(A) { direction: input; }
    pin(Z) {
      direction: output;
      function: "A *"; // expected-error {{expected expression}}
    }
  }
}

// -----

library(test) {
  cell(C) {
    pin(A) { direction: input; }
  }
  cell(C) { // expected-error {{redefinition of cell 'C'}}
    pin(B) { direction: input; }
  }
}

// -----

library(test) {
  cell(C) {
    pin(A) { direction: input; }
    pin(A) { // expected-error {{redefinition of pin 'A'}}
      direction: output;
    }
  }
}

// -----

library(test) {
  cell(C) {
    pin(A) { direction: input; }
    pin(Z) {
      direction: output;
      function: "'A"; // expected-error {{expected expression}}
    }
  }
}

// -----

library(test) {
  // expected-error@+2 {{multiple decimal points in number}}
  // expected-error@+1 {{expected attribute value}}
  capacitance: 1.0.0
}

// -----

library(test) {
  lu_table_template(delay_template_2x2) {
    index_1("0.1, 0.2");
    index_2("0.3, 0.4");
  }

  cell(BadDims) {
    pin(A) {
      direction: input;
    }
    pin(Z) {
      direction: output;
      function: "A";
      timing() {
        related_pin: "A";
        timing_sense: positive_unate;
        // expected-error @below {{NLDM table has 2 values, expected 4 for 2 x 2 indices}}
        cell_rise(delay_template_2x2) {
          values("0.1, 0.2");
        }
      }
    }
  }
}
